--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@ids/style-button": "^18.4.0",
     "@ids/style-css-helpers": "^18.4.0",
     "@ids/style-scaffolding": "^18.4.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
